[package]
name = "pipewrench"
version = "0.1.0"
authors = ["Gavin Massey <mdk@mystacktrace.org>"]

[dependencies]
glium_sdl2="0.10"
sdl2 = "0.13.0"
image = "0.9.0"
toml = "0.1.22"
num = "0.1.27"
nalgebra = "0.6.0"

[dependencies.glium]
version = "0.13.5"
default-features = false

[features]
default = ["collision", "render"]
collision = []
render = []
