[package]
name = "pipewrench"
version = "0.1.0"
authors = ["Gavin Massey <mdk@mystacktrace.org>"]

[dependencies]
glium_sdl2="0.15"
sdl2 = "0.30"
image = "0.23.13"
toml = "0.1.22"
num = "0.1.27"
cgmath = "0.18.0"
thiserror = "1.0"
[dependencies.glium]
version = "0.18.0"

[features]
default = ["collision"]
collision = []
